--- a/Detection-of-anomalies.ipynb
+++ b/Detection-of-anomalies.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "id": "3926c53a",
    "metadata": {},
    "outputs": [],
@@ -22,14 +22,14 @@
     "import seaborn as sns\n",
     "\n",
     "# Preprocessing\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "\n",
     "# Métriques d'évaluation\n",
-    "from sklearn.metrics import (classification_report, confusion_matrix, \n",
+    "from sklearn.metrics import (confusion_matrix, \n",
     "                             accuracy_score, precision_score, recall_score, \n",
-    "                             f1_score, roc_auc_score, roc_curve)\n",
+    "                             f1_score)\n",
     "\n",
     "from sklearn.ensemble import IsolationForest\n",
     "from sklearn.svm import OneClassSVM\n",
